--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="assets/Images/logo-images/Initials-Favicon.png" />
+    <link rel="icon" type="image" href="assets/Images/logo-images/Initials-Favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WristTrackers</title>
   </head>
